# biopass-rs

./: .gitattributes  .gitignore  AGENTS.md  Cargo.toml  LICENSE  Makefile  README.md  README.zh-CN.md  lefthook.yml  mise.ci.toml  mise.toml  release-plz.toml
.config/mise/conf.d/: bootstrap.toml
.github/workflows/: ci.yaml  release.yaml
app/: package.json  vite.config.ts
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/src/: face_session.rs  system.rs
app/src/app/configuration/: page.tsx
app/src/app/configuration/-components/: FingerprintSetting.tsx  MethodConfig.tsx  StrategyConfig.tsx  validation.ts
app/src/app/configuration/-components/face/: FaceCapture.tsx  FaceSetting.tsx
app/src/app/configuration/-components/methods/shared/: ModelSelect.tsx
apps/desktop/: biome.json  index.html  package.json  vite.config.ts
apps/desktop/src/: main.tsx
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/scripts/: ldconf  pam.conf
apps/desktop/src-tauri/scripts/deb/: postinst
apps/desktop/src-tauri/scripts/rpm/: postinst
apps/desktop/src-tauri/src/: config.rs  face.rs  face_session.rs  fingerprint.rs  fingerprint_auth.rs  fingerprint_ffi.rs  lib.rs  main.rs  paths.rs  system.rs
apps/desktop/src/app/: __root.tsx  models.tsx
apps/desktop/src/app/-components/: ModelStatus.tsx
apps/desktop/src/app/configuration/: page.tsx
apps/desktop/src/app/configuration/-components/: BrokenConfigOverlay.tsx  FingerprintSetting.tsx  MethodCard.tsx  MethodConfig.tsx  StrategyConfig.tsx  validation.ts
apps/desktop/src/app/configuration/-components/face/: FaceCapture.tsx  FaceSetting.tsx
apps/desktop/src/app/configuration/-components/methods/shared/: ModelSelect.tsx  Threshold.tsx
apps/desktop/src/app/configuration/-stores/: configuration-store.ts
apps/desktop/src/commands/: config.ts  core.ts  face.ts  file.ts
apps/desktop/src/components/ui/: button.tsx  dialog.tsx  dropdown-menu.tsx  select.tsx  slider.tsx  table.tsx  tabs.tsx  tooltip.tsx
apps/desktop/src/lib/: utils.ts
apps/desktop/src/types/: config.ts
auth/: LEGACY_CXX.md
auth/core/: auth_config.cc  auth_config.h
auth/face/: face_auth.cc
auth/face/antispoofing/: antispoof_check.cc  ir_camera_as.cc  ir_camera_as.h
auth/pam/: helper.cc
auth/rust/: Cargo.toml
auth/rust/pam/: Cargo.toml
auth/rust/src/: config.rs  face_antispoofing.rs  face_recognition.rs  fingerprint_auth.rs  lib.rs  manager.rs
crates/biopass-auth/: Cargo.toml
crates/biopass-auth/src/: camera.rs  config.rs  face_auth.rs  face_detection.rs  inference.rs  lib.rs
crates/biopass-pam/: Cargo.toml
crates/biopass-pam/src/: lib.rs
crates/biopass-rs-auth/: Cargo.toml
crates/biopass-rs-auth/src/: camera.rs  config.rs  face_antispoofing.rs  face_auth.rs  face_detection.rs  face_recognition.rs  fingerprint_auth.rs  image_io.rs  inference.rs  installer.rs  lib.rs  manager.rs
crates/biopass-rs-auth/src/camera/: capture.rs  controls.rs  decode.rs  device.rs  formats.rs  frame.rs  ir.rs  mod.rs  request.rs  session.rs  stream.rs
crates/biopass-rs-auth/src/config/: bootstrap.rs  migration.rs  mod.rs  paths.rs  schema.rs  serde_defaults.rs
crates/biopass-rs-pam/: Cargo.toml
crates/biopass-rs-pam/src/: lib.rs
docs/: IR camera.md  IR camera.zh-CN.md  PAM.md  PAM.zh-CN.md  Polkit.md  Polkit.zh-CN.md  biopass-helper.md  biopass-rs-helper.md  biopass-rs-helper.zh-CN.md  contributing.md  contributing.zh-CN.md  uninstall.md  uninstall.zh-CN.md  upstream-migration.md  upstream-migration.zh-CN.md
