[workspace]
resolver = "2"
members = [
    "apps/desktop/src-tauri",
    "crates/biopass-auth",
    "crates/biopass-pam",
]
default-members = [
    "apps/desktop/src-tauri",
    "crates/biopass-auth",
    "crates/biopass-pam",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/TickLabVN/biopass"

[workspace.dependencies]
anyhow = "1"
base64 = "0.22"
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
gtk = "0.18.2"
jpeg-decoder = "0.3"
jpeg-encoder = "0.6"
ort = "=2.0.0-rc.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tauri = "2"
tauri-build = "2"
tauri-plugin-fs = "2"
tauri-plugin-opener = "2"
tempfile = "3"
tokio = "1"
tract-onnx = "0.23"
v4l = "0.14"
webkit2gtk = "2.0.1"
zbus = "5.14.0"
