[workspace]
resolver = "2"
members = [
    "apps/desktop/src-tauri",
    "crates/biopass-rs-auth",
    "crates/biopass-rs-pam",
]
default-members = [
    "apps/desktop/src-tauri",
    "crates/biopass-rs-auth",
    "crates/biopass-rs-pam",
]

[workspace.package]
version = "0.6.10"
edition = "2021"
license = "MIT"
repository = "https://github.com/YewFence/biopass-rs"

[workspace.dependencies]
anyhow = "1"
base64 = "0.22"
biopass-rs-auth = { path = "crates/biopass-rs-auth" }
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
jpeg-decoder = "0.3"
jpeg-encoder = "0.6"
self_cell = "1.2"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
tauri = "2"
tauri-build = "2"
tauri-plugin-fs = "2"
tauri-plugin-opener = "2"
tempfile = "3"
tokio = "1"
tract-onnx = "0.23"
users = "0.11"
v4l = "0.14"
webkit2gtk = "2.0.1"
zbus = "5.14.0"
