[package]
name = "biopass-auth"
version = "0.1.0"
edition = "2021"

[lib]
name = "biopass_auth"
path = "src/lib.rs"

[dependencies]
anyhow = "1"
jpeg-decoder = "0.3"
jpeg-encoder = "0.6"
ort = "=2.0.0-rc.10"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
tract-onnx = "0.23"
v4l = "0.14"
zbus = "5.14.0"

[dev-dependencies]
tempfile = "3"
