[package]
name = "biopass-auth"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "biopass_auth"
path = "src/lib.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
clap_complete.workspace = true
jpeg-decoder.workspace = true
jpeg-encoder.workspace = true
ort.workspace = true
serde.workspace = true
serde_yaml.workspace = true
tract-onnx.workspace = true
v4l.workspace = true
zbus.workspace = true
ureq = "3"
indicatif = "0.18"

[dev-dependencies]
tempfile.workspace = true
