[package]
name = "biopass-rs-auth"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[lib]
name = "biopass_rs_auth"
path = "src/lib.rs"

[[bin]]
name = "biopass-rs-helper"
path = "src/bin/biopass_rs_helper/main.rs"

[dependencies]
anyhow.workspace = true
chrono.workspace = true
clap.workspace = true
clap_complete.workspace = true
jpeg-decoder.workspace = true
jpeg-encoder.workspace = true
self_cell.workspace = true
serde.workspace = true
serde_yaml.workspace = true
tract-onnx.workspace = true
users.workspace = true
v4l.workspace = true
zbus.workspace = true
ureq = "3"
indicatif = "0.18"

[dev-dependencies]
tempfile.workspace = true
