[package]
name = "biopass"
version.workspace = true
description = "Biometric Authentication System"
authors = ["phucvinh57"]
edition.workspace = true
license.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "biopass_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { workspace = true, features = [] }

[dependencies]
base64.workspace = true
biopass-auth = { path = "../../../crates/biopass-auth" }
gtk.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
tauri = { workspace = true, features = ["protocol-asset", "devtools"] }
tauri-plugin-fs.workspace = true
tauri-plugin-opener.workspace = true
tokio = { workspace = true, features = ["rt"] }
webkit2gtk.workspace = true
zbus.workspace = true

[dev-dependencies]
tempfile.workspace = true
